Bug 164921 - Renaming list styles is not correctly processed
Summary: Renaming list styles is not correctly processed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph
  Show dependency treegraph
 
Reported: 2025-01-29 11:58 UTC by Oliver Specht (CIB)
Modified: 2025-04-04 15:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Document containing a user defined list style applied to a paragraph style (10.56 KB, application/vnd.oasis.opendocument.text)
2025-01-29 11:58 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-01-29 11:58:14 UTC
Created attachment 198848 [details]
Document containing a user defined list style applied to a paragraph style

The bugdoc has a user defined list style "NewListStyle" that is applied to the paragraph style "Body Text". 
The paragraph in the document has the paragraph style "Body Text" applied.

If the list style is renamed the assignment to "Body Text" is gone and the renamed list style is applied directly to the paragraph.
Comment 1 Commit Notification 2025-02-11 22:06:37 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe1a74c68b892d01bf5d8be9aed90c12c5bf6abd

tdf#164921 Renaming list styles fixed

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-02-12 16:32:56 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/dffdb6ebeefe0783cc67168406a3bcffd4b60144

tdf#164921 Renaming list styles fixed

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.