tdf#164921 Renaming list styles fixed

User defined list styles are now correctly updated in paragraph
styles that are using them and only directly applied to paragraphs
that had a direct formating before.

Change-Id: I9b671655ffa430d643c48fc35f15f38b41de4b9b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180892
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins